--- a/docker-compose.Development.yml
+++ b/docker-compose.Development.yml
@@ -1,4 +1,16 @@
 services:
+  server:
+    command: --debug --dbaddr db --dbuser pokerogue --dbpass pokerogue --dbname pokeroguedb --gameurl http://localhost:8000 --callbackurl http://localhost:8001 
+    image: ghcr.io/pagefaultgames/rogueserver:master
+    restart: unless-stopped
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - internal
+    ports:
+      - "8001:8001"
+
   db:
     image: mariadb:11
     container_name: pokerogue-db-local
